[workspace]
members = [
    "01_variable",
    "02_operation",
    "03_tuple_array",
    "04_if_loop_for_while",
    "05_own_ref_slice",
    "06_struct",
    "07_debugging",
    "08_method",
    "09_enum_match_if_let",
    "10_option",
    "11_crate_module",
    "12_accessibility",
    "13_use",
    "14_collection",
    "15_panic_file",
    "16_generic_trait",
    "17_lifetime",
    "18_test",
    "19_command_line_stderr",
    "20_closure_function_pointer",
    "21_iterator",
    "22_documents",
    "23_workspace_dependency",
    "24_Box_Rc_Drop_Deref",
    "25_RefCell",
    "26_memory_leak",
    "27_weak",
    "28_thread_message_passing",
    "29_mutex_arc",
    "30_pattern",
    "31_unsafe",
    "32_name_collision",
    "33_operator_overloading",
    "34_super_trait",
    "35_newtype",
    "36_empty_type",
    "37_sized_type_oop",
]
